# rust-projects

./: .gitignore  README.md
cli/minigrep/src/: lib.rs  main.rs
cli/to-do-list/: todos.txt
cli/to-do-list/src/: main.rs
client/twitch-download/: .gitignore  Cargo.toml
client/twitch-download/src/: main.rs
client/web-scraper/: Cargo.toml
client/web-scraper/src/: main.rs  models.rs  scraper.rs
gui/rust_temperature_converter/: Cargo.toml
gui/rust_temperature_converter/src/: main.rs
learning/channel-learning/: Cargo.toml
learning/channel-learning/src/: channel.rs  main.rs
learning/iterators/src/: lib.rs
learning/pointers/src/: cell.rs  lib.rs  refcell.rs
protocol/my-dns/: Cargo.toml
protocol/my-dns/src/: main.rs  packets.rs
protocol/tcp-rust/: Cargo.toml  readme.md
protocol/tcp-rust/src/: main.rs  tcp.rs
server/reverse-proxy-pingora/: Cargo.toml
server/reverse-proxy-pingora/src/: load_balancer.rs  main.rs
server/warp-http/: Cargo.toml
server/warp-http/src/: main.rs
